MstEmployee Header and TextInput formatting issues covered

--- a/whris_v2/Content/Site.css
+++ b/whris_v2/Content/Site.css
@@ -23,6 +23,21 @@ textarea {
     max-width: 280px;
 }
 
+//Overrides
+
+.col-form-label {
+    padding-top: calc(.375rem + 1px);
+    padding-bottom: calc(.375rem + 1px);
+    margin-bottom: 0;
+    font-size: inherit;
+    line-height: 1.5;
+    font-weight: 600;
+}
+
+.form-group {
+    margin-bottom: .3rem;
+}
+
 /*
     Side bar
 */
@@ -508,3 +523,126 @@ body {
 .chiller-theme .sidebar-footer>a:last-child {
     border-right: none;
 }
+
+
+/*footer*/
+.col_white_amrc {
+    color: #FFF;
+}
+
+footer {
+    width: 100%;
+    background-color: #31353d;
+    min-height: 250px;
+}
+
+.pt2 {
+    padding-top: 40px;
+    margin-bottom: 20px;
+}
+
+footer p {
+    font-size: 13px;
+    color: #CCC;
+    padding-bottom: 0px;
+    margin-bottom: 8px;
+}
+
+.mb10 {
+    padding-bottom: 15px;
+}
+
+.footer_ul_amrc {
+    margin: 0px;
+    list-style-type: none;
+    font-size: 14px;
+    padding: 0px 0px 10px 0px;
+}
+
+    .footer_ul_amrc li {
+        padding: 0px 0px 5px 0px;
+    }
+
+        .footer_ul_amrc li a {
+            color: #CCC;
+        }
+
+            .footer_ul_amrc li a:hover {
+                color: #fff;
+                text-decoration: none;
+            }
+
+.fleft {
+    float: left;
+}
+
+.padding-right {
+    padding-right: 10px;
+}
+
+.footer_ul2_amrc {
+    margin: 0px;
+    list-style-type: none;
+    padding: 0px;
+}
+
+    .footer_ul2_amrc li p {
+        display: table;
+    }
+
+    .footer_ul2_amrc li a:hover {
+        text-decoration: none;
+    }
+
+    .footer_ul2_amrc li i {
+        margin-top: 5px;
+    }
+
+.bottom_border {
+    border-bottom: 1px solid #323f45;
+    padding-bottom: 20px;
+}
+
+.foote_bottom_ul_amrc {
+    list-style-type: none;
+    padding: 0px;
+    display: table;
+    margin-top: 10px;
+    margin-right: auto;
+    margin-bottom: 10px;
+    margin-left: auto;
+}
+
+    .foote_bottom_ul_amrc li {
+        display: inline;
+    }
+
+        .foote_bottom_ul_amrc li a {
+            color: #999;
+            margin: 0 12px;
+        }
+
+.social_footer_ul {
+    display: table;
+    margin: 15px auto 0 auto;
+    list-style-type: none;
+}
+
+    .social_footer_ul li {
+        padding-left: 20px;
+        padding-top: 10px;
+        float: left;
+    }
+
+        .social_footer_ul li a {
+            color: #CCC;
+            border: 1px solid #CCC;
+            padding: 8px;
+            border-radius: 50%;
+        }
+
+        .social_footer_ul li i {
+            width: 20px;
+            height: 20px;
+            text-align: center;
+        }
